--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -7,6 +7,7 @@ repos:
     rev: 4.0.1
     hooks:
       - id: flake8
+        args: [--max-line-length=100]
   - repo: https://github.com/PyCQA/isort
     rev: 5.10.1
     hooks:
