--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -12,6 +12,7 @@ repos:
     rev: 5.10.1
     hooks:
       - id: isort
+        args: [--profile, black, --filter-files]
   - repo: https://github.com/PyCQA/pydocstyle
     rev: 6.1.1
     hooks:
