--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ scikit-learn = "^1.0.2"
 torch = "^1.10.1"
 pandas = "^1.4.0"
 pre-commit = "^2.19.0"
+black = "^22.3.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
