--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,9 @@ torch = "^1.10.1"
 pandas = "^1.4.0"
 pre-commit = "^2.19.0"
 black = "^22.3.0"
+twint = "^2.1.20"
+nest-asyncio = "^1.5.5"
+gradio = "^2.9.4"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
