--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ black = "^22.3.0"
 twint = "^2.1.20"
 nest-asyncio = "^1.5.5"
 gradio = "^2.9.4"
+pytest = "^7.1.2"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
