--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ description = "Analyze Twitter positivity"
 authors = ["hectorLop <lopez.almazan.hector@gmail.com>"]
 
 [tool.poetry.dependencies]
-python = "3.9"
+python = "^3.9"
 transformers = "^4.18.0"
 scikit-learn = "^1.0.2"
 torch = "^1.10.1"
