--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ twint = "^2.1.20"
 nest-asyncio = "^1.5.5"
 gradio = "^2.9.4"
 pytest = "^7.1.2"
+boto3 = "^1.23.3"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
