--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -13,14 +13,24 @@ concurrency:
   cancel-in-progress: true
 
 jobs: 
-  continuous_integration:
-    name: Continuous Integration Pipeline
-    uses: ./.github/workflows/ci.yml
+  poetry_install:
+    name: Install poetry
+    uses: ./.github/workflows/poetry_install.yml
+ 
+  unit_testing:
+    needs: poetry_install
+    uses: ./.github/workflows/unit_testing.yml
+
+  integration_testing:
+    needs: poetry_install
+    uses: ./.github/workflows/integration_testing.yml 
 
   backend_deployment:
+    needs: integration_testing
     name: Backend Deployment
     uses: ./.github/workflows/backend_deployment.yml
 
   frontend_deployment:
+    needs: integration_testing
     name: Frontend Deployment
     uses: ./.github/workflows/frontend_deployment.yml
