--- a/.github/workflows/backend_deployment.yml
+++ b/.github/workflows/backend_deployment.yml
@@ -12,10 +12,9 @@ jobs:
         shell: bash
  
     steps:
-      - uses: actions/checkout@v2
-        with:
-          lfs: true
-      
+      - name: Checkout
+        uses: actions/checkout@v2
+              
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
