--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -2,7 +2,9 @@ name: Continuous Deployment Pipeline
 
 on:
   workflow_dispatch:
+  workflow_call:
   push:
+    branches: ['main']
     paths: 
       - 'web_app/**', 
       - 'twitter_analyzer/**'
