--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,6 +2,7 @@ name: Build, Unit Test
 
 on:
   workflow_dispatch:
+  workflow_call:
   push:
     branches: ['main']
     paths-ignore: ['docs/**', '*', '!pyproject.toml']
