--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -1,13 +1,13 @@
 name: Continuous Deployment Pipeline
 
 on:
-  workflow_dispatch:
-  workflow_call:
   push:
-    branches: ['main']
+    branches:
+      - 'main'
     paths: 
       - 'web_app/**', 
       - 'twitter_analyzer/**'
+  workflow_dispatch:
   
 concurrency:
   # New commit on branch cancels running workflows of the same branch
