--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ nest-asyncio = "^1.5.5"
 gradio = "^2.9.4"
 pytest = "^7.1.2"
 boto3 = "^1.23.3"
+dvc = {extras = ["gdrive"], version = "^2.10.2"}
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
