Added dvc pull to unitary testing

--- a/.github/workflows/unit_testing.yml
+++ b/.github/workflows/unit_testing.yml
@@ -20,6 +20,9 @@ jobs:
         uses: ./.github/actions/setup_environment
 
       - name: Test
+        env: 
+          GDRIVE_CREDENTIALS_DATA: ${{ secrets.GDRIVE_CREDENTIALS_DATA }}
         run: |
           source $VENV
+          dvc pull
           python -m pytest tests/unitary/
