--- a/.github/workflows/frontend_deployment.yml
+++ b/.github/workflows/frontend_deployment.yml
@@ -1,6 +1,17 @@
 name: Deploy the Gradio application
 
-on: workflow_call
+on: 
+  workflow_call:
+    secrets: 
+        AWS_ACCESS_KEY_ID:
+          description: 'AWS access key'
+          required: true
+        AWS_SECRET_ACCESS_KEY:
+          description: 'AWS secret access key'
+          required: true
+        AWS_REGION:
+          description: 'AWS region'
+          required: true
 
 jobs:
   frontend_deployment:
@@ -27,6 +38,9 @@ jobs:
         env:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
           ECR_REPOSITORY: twitter-frontend
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          AWS_REGION: ${{ secrets.AWS_REGION }}
           IMAGE_TAG: latest
         run: |
           docker build -f web_app/frontend.Dockerfile -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG \
