--- a/.github/workflows/backend_deployment.yml
+++ b/.github/workflows/backend_deployment.yml
@@ -15,6 +15,9 @@ on:
         AWS_REGION:
           description: 'AWS region'
           required: true
+        ECR_REGISTRY:
+          description: 'Backend ECR registry'
+          required: true
 
 jobs:
   backend_deployment:
@@ -39,7 +42,7 @@ jobs:
       - name: Build, tag, and push image to Amazon ECR
         id: build-backend-image
         env:
-          ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+          ECR_REGISTRY: ${{ secrets.ECR_REGISTRY }}
           ECR_REPOSITORY: twitter-positivity-analyzer
           IMAGE_TAG: latest
         run: |
@@ -49,7 +52,7 @@ jobs:
       - name: Update Lambda function with latest ECR image
         env:
           LAMBDA_NAME: twitter-analyzer-lambda
-          ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+          ECR_REGISTRY: ${{ secrets.ECR_REGISTRY }}
           ECR_REPOSITORY: twitter-positivity-analyzer
           IMAGE_TAG: latest
         run: |
