--- a/.github/workflows/backend_deployment.yml
+++ b/.github/workflows/backend_deployment.yml
@@ -34,7 +34,7 @@ jobs:
       - name: Download checkpoints
         env:
           GDRIVE_CREDENTIALS_DATA: ${{ secrets.GDRIVE_CREDENTIALS_DATA }}
-        uses: |
+        run: |
           source $VENV
           dvc pull
               
